# StrangeMachine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  goth.glb  plane.mtl
EngineRoom/Conversor/: CMakeLists.txt  cube.glb  smConversor.c
StrangeMachine/: CMakeLists.txt  smCamera.c  smClip.c  smClip.h  smCollision.h  smController.c  smController.h  smCrossFadeTarget.c  smDebug.c  smDebug.h  smFontGo.embed  smGLTFLoader.c  smInput.c  smInput.h  smInterpolation.h  smLoader.c  smMesh.c  smModel.c  smOBJLoader.c  smPhysics.c  smPhysics.h  smPose.h  smShapes.c  smSkeleton.c  smSkeleton.h  smSkinnedMesh.c  smSkinnedMesh.h  smSkinnedModel.c  smSkinnedModel.h  smTrack.h  smTransformTrack.h  smpch.h
StrangeMachine/cimgui/: smCimgui.c  smCimgui.h  smCimguiImpl.h
StrangeMachine/core/: smApplication.c  smApplication.h  smAssert.h  smBase.h  smCore.h  smHandle.c  smHandle.h  smKeyCode.c  smLayer.h  smLog.h  smMem.c  smMem.h  smMouseCode.h  smPool.c  smPool.h  smRc.h  smStackLayer.c  smStackLayer.h  smTime.c  smTime.h  smTimer.c  smWindow.c  smWindow.h  smWindowPub.h
StrangeMachine/core/data/: smArray.c  smArray.h  smHashMap.c  smHashMap.h  smHashTable.h
StrangeMachine/core/thread/: smThread.c  smThread.h  smThreadDecl.h
StrangeMachine/core/thread/synchronization/: smMutexDecl.h
StrangeMachine/core/util/: smBitMask.h  smDir.c  smFile.c  smFile.h  smFilesystem.c  smFilesystem.h  smFilesystemPub.h  smString.c  smString.h  smUtil.h
StrangeMachine/event/: smEvent.c  smEvent.h
StrangeMachine/glsl/: renderer3D.vs  skybox.fs
StrangeMachine/math/: smFastLog2.c  smFastLog2.h  smMath.h  smTransform.c  smTransform.h
StrangeMachine/renderer/: smDevice.c  smDevicePub.h  smOrthographicCamera.c  smOrthographicCamera.h  smRenderer2D.c  smRenderer2D.h  smRenderer3D.c  smRenderer3D.h
StrangeMachine/renderer/api/: smDescriptor.h  smTypes.h
StrangeMachine/renderer/api/GL21/: smDraw.c  smDraw.h  smGL21.h  smGLUtil.c  smGLUtil.h  smIndexBuffer.c  smIndexBuffer.h  smShader.c  smShader.h  smTexture.c  smTexture.h  (+3 more)
StrangeMachine/resource/: smResource.c  smResource.h  smShaderResource.c  smShaderResource.h  smTextureResource.c  smTextureResourcePriv.h  smTextureResourcePub.h
StrangeMachine/resource/file_format/: smSMR.c  smSMR.h
StrangeMachine/scene/: smComponents.c  smComponents.h  smEntity.h  smScene.c  smScene.h  smSceneDecl.h  smSceneGraph.c  smSceneGraph.h  smSystem.c  smSystem.h
StrangeMachine/shape/: smGeometry2D.c  smGeometry2D.h  smGeometry3D.c  smGeometry3D.h
StrangeMachine/util/: hash_table.c
TestSites/debug/: CMakeLists.txt  debug.c
TestSites/terror-em-sl/: CMakeLists.txt  center.c  center.h  main.c  scene.c  scene.h  scene_defs.h  stage.c
TestSites/world3D/: CMakeLists.txt  main.c
engine/: CMakeLists.txt  smAttribute.c  smAttribute.h  smCamera.c  smCamera.h  smCameraP.h  smClip.c  smClip.h  smCollision.c  smCollision.h  smController.c  smController.h  smCrossFadeTarget.c  smCrossFadeTarget.h  smDebug.c  smDebug.h  smGLTFLoader.c  smGLTFLoader.h  smIndexBuffer.c  smIndexBuffer.h  smInput.c  smInput.h  smLoader.c  smMem.c  smMem.h  smMesh.c  smMesh.h  smModel.c  smModel.h  smOBJLoader.c  smOBJLoader.h  smPhysics.c  smPhysics.h  smPose.c  smPose.h  smRearrangeBones.c  smShader.c  smShader.h  smShaderProgram.c  smShaderProgram.h  (+22 more)
engine/cimgui/: smCimgui.c  smCimgui.h
engine/core/: smApplication.c  smApplication.h  smAssert.h  smBase.h  smCore.h  smKeyCode.h  smLayer.c  smLayer.h  smLayerPub.h  smLog.h  smMem.c  smMem.h  smMouseCode.h  smPool.c  smPool.h  smStackLayer.c  smStackLayer.h  smTime.c  smTime.h  smTimer.h  smWindow.c  smWindow.h  smWindowPub.h
engine/core/data/: smArray.h  smHashTable.h
engine/core/thread/: smThreadDecl.h
engine/core/util/: smBitMask.h  smDir.h  smFile.c  smString.c  smString.h
engine/data/: array.h  hash_table.h
engine/event/: smEvent.c  smEvent.h  smEventPub.h  smKeyEvent.h
engine/glsl/: renderer2D.fs  renderer2D.vs  skinned.vs  static.vs
engine/include/glad/: glad.h
engine/include/stb_ds/: stb_ds.h
engine/math/: CMakeLists.txt  mat4.c  mat4.h  quat.c  quat.h  scalar.c  scalar.h  smMath.h  smTransform.c  smTransform.h  transform.c  transform.h  vec2.h  vec3.c  vec3.h  vec4.h
engine/math/spline/: bezier.c
engine/renderer/: smDevice.c  smDeviceDefs.h  smDevicePub.h  smRenderer2D.c  smRenderer2D.h
engine/renderer/api/: smDeviceAPIs.h  smTypes.h
engine/resource/: smResource.c  smResource.h  smTextureResource.c  smTextureResourcePriv.h  smTextureResourcePub.h
engine/resources/: smResources.c  smResources.h
engine/scene/: smComponents.c  smComponents.h  smScene.c  smScene.h  smSceneDecl.h
engine/src/: glad.c  smAttribute.c  smAttribute.h  smCamera.h  smClip.h  smCollision.h  smCrossFadeTarget.c  smCrossFadeTarget.h  smGLTFLoader.c  smIndexBuffer.c  smIndexBuffer.h  smInterpolation.h  smMesh.c  smModel.c  smModel.h  smOBJLoader.c  smPhysics.c  smPose.h  smRearrangeBones.c  smRearrangeBones.h  smShader.c  smShader.h  smShaderProgram.c  smShapes.h  smSkinnedModel.h  smTexture.c  smTrack.c  smTrack.h  smTransformTrack.c  smTransformTrack.h  smUniform.c  smUniform.h
engine/src/debug/: debug.c  debug.h
engine/src/glsl/: debug.vs
engine/src/input/: input.c  input.h
engine/src/model/: GLTF_loader.c  GLTF_loader.h  OBJ_loader.c  OBJ_loader.h  clip.c  clip.h  controller.c  controller.h  cross_fade_target.c  cross_fade_target.h  interpolation.h  mesh.c  mesh.h  model.c  model.h  pose.c  pose.h  rearrange_bones.c  rearrange_bones.h  skeleton.c  skeleton.h  skinned_mesh.c  skinned_mesh.h  skinned_model.c  skinned_model.h  track.c  track.h  transform_track.c  transform_track.h  vertex.h
engine/src/physics/: collision.h  physics.c  physics.h  shapes.c  shapes.h
engine/src/shader/: attribute.c  attribute.h  camera.c  camera.h  camera_p.h  index_buffer.c  index_buffer.h  shader.c  shader.h  texture.c  texture.h  uniform.c  uniform.h
engine/src/text/: text.c  text.h
engine/util/: array.h  bitmask.h  colors.h  common.h  file.h  loader.c
examples/entity/: CMakeLists.txt  main.c
(+67 files in other folders)
